# agentic-programming

./: .gitignore  IMPLEMENTATION_SUMMARY.md  ORCHESTRATOR_README.md  QUICK_REFERENCE.md  README.md  demo.py  examples.py  main.py  mcp.json  pyproject.toml  requirements.txt
.claude/agents/: laravel-package.agent.md  research-mcp.agent.md  research-skill.agent.md  sync-skills.md
.cursor/agents/: idea.agent.md  research-mcp.agent.md  research-skill.agent.md  sync-agents.md
.cursor/gaps/: .gitkeep
.github/: mcp.json
.github/agents/: idea.agent.md  laravel-package.agent.md  mcp-research.agent.md  research-mcp.agent.md  research-skill.agent.md  skill-research.agent.md
.github/workflows/: copilot-setup-steps.yml  sync-skill-template.yml  verify-steering-sync.yml
.steering/: README.md  mcp.json
.steering/agents/: idea.agent.md  laravel-package.agent.md  research-mcp.agent.md  research-skill.agent.md  sync-agents.md  sync-skills.md
.steering/cursor/: Agents.md  Hooks.md  Plugins.md  Rules.md  Skills.md
.steering/github-copilot/: Agent MCP.md  SDK.md  (+7 more)
agentic_sdlc/: __init__.py  cli.py
commands/: 00-start.md  01-forbidden.md  02-mcp.md  03-pipeline.md  98-research-package.md  99-rebake.md
mcps/: README.md
orchestrator/: README.md  __init__.py  agent_factory.py  guardrail_supervisor.py  markdown_parser.py  pipeline_controller.py
scripts/: regenerate-ide-mirrors.py  sync-boost-ai-skills.py
support/: 01-forbidden.md  02-mcp.md  03-pipeline.md  04-rules.md
templates/: agents.md
tests/: test_command_parser.py  test_guardrail_parser.py  test_supervisor.py
(+104 files in other folders)
